force-app/main/default/objects/Request_Object_Picklist_Setup__mdt/Request_Object_Picklist_Setup__mdt.object-meta.xml
<CustomObject>
    <description>NICC-057703; Allows for creating custom picklist choice sets for use in the Flow called “Request - Creative Team Intake Form”.</description>
    <label>Request Object Picklist Setup</label>
    <pluralLabel>Request Object Picklist Setup</pluralLabel>
</CustomObject>