force-app/main/default/objects/Request_Object_Picklist_Setup__mdt/fields/AH_GMSRequestType__c.field-meta.xml
<CustomField>
    <fullName>AH_GMSRequestType__c</fullName>
    <description>NICC-057703; Used to populate a picklist in a Flow called &quot;Request - Creative Team Intake Form&quot;. Populates the field called &quot;Request Type&quot; on the screen called &quot;GMSInputScreen&quot;</description>
    <label>GMS Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Transactional Email(s)</fullName>
            </value>
            <value>
                <fullName>New Transactional Template(s)</fullName>
            </value>
            <value>
                <fullName>New Campaign Email(s)</fullName>
            </value>
            <value>
                <fullName>New Campaign Template(s)</fullName>
            </value>
            <value>
                <fullName>New Form(s)</fullName>
            </value>
            <value>
                <fullName>New Dynamic Variable(s)</fullName>
            </value>
            <value>
                <fullName>Update Transactional Email(s)</fullName>
            </value>
            <value>
                <fullName>Update Transactional Template(s)</fullName>
            </value>
            <value>
                <fullName>Update Campaign Email(s)</fullName>
            </value>
            <value>
                <fullName>Update Campaign Template(s)</fullName>
            </value>
            <value>
                <fullName>Update Form(s)</fullName>
            </value>
            <value>
                <fullName>Update Dynamic Variable(s)</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Campaign(s)</fullName>
                <isActive>false</isActive>
                <label>Campaign(s)</label>
            </value>
            <value>
                <fullName>Dynamic Variable(s)</fullName>
                <isActive>false</isActive>
                <label>Dynamic Variable(s)</label>
            </value>
            <value>
                <fullName>Form(s)</fullName>
                <isActive>false</isActive>
                <label>Form(s)</label>
            </value>
            <value>
                <fullName>Transactional(s)</fullName>
                <isActive>false</isActive>
                <label>Transactional(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>