force-app/main/default/objects/Request_Object_Picklist_Setup__mdt/fields/AH_Product__c.field-meta.xml
<CustomField>
    <fullName>AH_Product__c</fullName>
    <description>NICC-057703; Used to populate Product choices in the Flow called &quot;Request - Creative Request Intake Form&quot;. Used on the screen called &quot;Creative Form Page 1&quot;, field &quot;Product&quot;</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Travel Audience (TA)</fullName>
            </value>
            <value>
                <fullName>Travel Advertising</fullName>
            </value>
            <value>
                <fullName>RES/iH</fullName>
            </value>
            <value>
                <fullName>Internal Request</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
                <isActive>false</isActive>
                <label>Media</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <isActive>false</isActive>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>