force-app/main/default/objects/Request_Object_Picklist_Setup__mdt/fields/Status_for_Design_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Design_Time__c</fullName>
    <description>NICC-057703; Used to populate Status choices in the Flow called &quot;Request - Creative Team Record Handoff&quot;.</description>
    <label>Status for Design Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Alpha Edits</fullName>
            </value>
            <value>
                <fullName>Beta Edits</fullName>
            </value>
            <value>
                <fullName>Final Edits</fullName>
            </value>
            <value>
                <fullName>Alpha Review</fullName>
                <isActive>false</isActive>
                <label>Alpha Review</label>
            </value>
            <value>
                <fullName>Beta Review</fullName>
                <isActive>false</isActive>
                <label>Beta Review</label>
            </value>
            <value>
                <fullName>Final Review</fullName>
                <isActive>false</isActive>
                <label>Final Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>